--- a/index.html
+++ b/index.html
@@ -2,7 +2,14 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,user-scalable=no"/>
     <title>vue-search</title>
+    <style>
+    	html{
+    		height: 100%;
+    		overflow: hidden;
+    	}
+    </style>
   </head>
   <body>
     <div id="app"></div>
